syntax = "proto3";

option java_package = "org.pipelineframework.csv.grpc";

import "payments_processing_svc.proto";

message PaymentOutput {
  string id = 1; // from BaseEntity
  string csvPaymentsOutputFilename = 2;
  string csvId = 3;
  string recipient = 4;
  string amount = 5; // BigDecimal
  string currency = 6; // Currency
  string conversationId = 7;
  int64  status = 8; // Long
  string message = 9;
  string fee = 10; // BigDecimal
  PaymentStatus paymentStatus = 11;
}

service ProcessPaymentStatusReactiveService {
  rpc remoteProcess(PaymentStatus) returns (PaymentOutput);
}
